Change History
==============

3.5.1 (unreleased)
------------------

- ...

3.5.0 (2009-01-31)
------------------

- Remove old module declarations from classes.

- Use zope.container instead of zope.app.container.

3.4.0 (2007-09-01)
------------------

Initial release as an independent package