@@ -2,8 +2,6 @@
 develop = .
 parts = test
 
-find-links = http://download.zope.org/distribution/
-
 [test]
 recipe = zc.recipe.testrunner
 eggs = zope.lifecycleevent [test]
