@@ -1,6 +1,0 @@
-# zope.app brings in container for testing
-zope.app
-zope.component
-zope.deferredimport
-zope.event
-zope.interface
