@@ -4,7 +4,10 @@ Change History
 3.5.1 (unreleased)
 ------------------
 
-- ...
+- Remove deprecated code and thus remove dependency on zope.deferredimport.
+
+- Change package's mailing list address to zope-dev at zope.org, as
+  zope3-dev at zope.org is now retired. 
 
 3.5.0 (2009-01-31)
 ------------------
